--- a/style.css
+++ b/style.css
@@ -16,8 +16,12 @@ body {
 }
 
 #numTitle span {
-    width: 36px;
+    width: 38px;
     display: inline-block;
+}
+
+#numTitle span.row {
+    width: 30px;
 }
 
 #solutions {
@@ -28,8 +32,8 @@ body {
 
 #solutions td {
     font: 14px/1 Helvetica, Arial, sans-serif;
-    width: 36px;
-    height: 36px;
+    width: 38px;
+    height: 38px;
     padding: 0;
     background-color: #f2bc0f;
     border-radius: 6px;
@@ -38,6 +42,7 @@ body {
 
 #solutions td.row {
     color: #afadad;
+    width: 30px;
     background: none;
     text-align: right;
     font-size: 10px;
