--- a/src/style.css
+++ b/src/style.css
@@ -76,6 +76,8 @@ body {
     margin: 10px 20px;
     height: 100px;
     text-align: center;
+    font-family: MJXc-TeX-main-R,MJXc-TeX-main-Rw;
+    font-size: 110%;
 }
 
 #answer #solution {
